--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^1.7.7",
+    "js-cookie": "^3.0.5",
     "vue": "^3.4.37",
     "vue-router": "^4.4.5"
   },
